force-app/main/default/objects/SIGHTS_CAMERA_INF__x/SIGHTS_CAMERA_INF__x.object-meta.xml
<CustomObject>
    <description>SIGHTS_CAMERA_INF</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SIGHTS_CAMERA_INF</externalName>
    <label>Sightsカメラ情報</label>
</CustomObject>