force-app/main/default/objects/SIGHTS_CAMERA_INF__x/fields/camera_error_flag__c.field-meta.xml
<CustomField>
    <fullName>camera_error_flag__c</fullName>
    <description>camera_error_flag</description>
    <externalDeveloperName>camera_error_flag</externalDeveloperName>
    <label>カメラエラーフラグ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>