force-app/main/default/objects/SIGHTS_CAMERA_INF__x/fields/camera_id__c.field-meta.xml
<CustomField>
    <fullName>camera_id__c</fullName>
    <description>camera_id</description>
    <externalDeveloperName>camera_id</externalDeveloperName>
    <label>カメラID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>