force-app/main/default/objects/SIGHTS_CAMERA_INF__x/fields/device_mng_id__c.field-meta.xml
<CustomField>
    <fullName>device_mng_id__c</fullName>
    <description>device_mng_id</description>
    <externalDeveloperName>device_mng_id</externalDeveloperName>
    <label>機器管理</label>
    <length>36</length>
    <referenceTo>DEVICE_MNG__x</referenceTo>
    <relationshipLabel>Sightsカメラ情報</relationshipLabel>
    <relationshipName>sights_camera_inf_LKUP</relationshipName>
    <type>ExternalLookup</type>
</CustomField>