force-app/main/default/objects/SIGHTS_CAMERA_INF__x/fields/fw_ver__c.field-meta.xml
<CustomField>
    <fullName>fw_ver__c</fullName>
    <description>fw_ver</description>
    <externalDeveloperName>fw_ver</externalDeveloperName>
    <label>FWバージョン</label>
    <length>100</length>
    <type>Text</type>
</CustomField>