force-app/main/default/objects/SIGHTS_CAMERA_INF__x/fields/video_stream_name__c.field-meta.xml
<CustomField>
    <fullName>video_stream_name__c</fullName>
    <description>video_stream_name</description>
    <externalDeveloperName>video_stream_name</externalDeveloperName>
    <label>KVSストリーム名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>