force-app/main/default/objects/SIGHTS_CAMERA_INF__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>device_mng_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>